--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@arcgis/core": "4.26.5",
         "@ecgc/vue-slider-component": "4.0.0-beta.7",
         "@popperjs/core": "^2.11.6",
+        "@ramp4-pcar4/vue3-treeselect": "github:ramp4-pcar4/vue3-treeselect",
         "@vueform/toggle": "^2.1.3",
         "ag-grid-community": "^27.3.0",
         "ag-grid-vue3": "^27.3.0",
@@ -52,6 +53,7 @@
         "vue-accessible-color-picker": "^4.0.3",
         "vue-i18n": "^9.1.7",
         "vue-tippy": "^6.0.0",
+        "vue3-treeselect": "github:ramp4-pcar4/vue3-treeselect",
         "vuedraggable": "next"
     },
     "engines": {
