--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@arcgis/core": "4.26.5",
         "@ecgc/vue-slider-component": "4.0.0-beta.7",
         "@popperjs/core": "^2.11.6",
+        "@tailwindcss/line-clamp": "^0.4.4",
         "@vueform/toggle": "^2.1.3",
         "ag-grid-community": "^27.3.0",
         "ag-grid-vue3": "^27.3.0",
