Added search bar to Help

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ramp",
-    "version": "4.3.0",
+    "version": "4.4.0-beta",
     "type": "module",
     "scripts": {
         "dev": "vite",
