--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["./src/*"],
+            "vue-slider-component": ["./scripts/vue-slider-component.d.ts"]
         },
         "lib": ["DOM", "DOM.Iterable", "ES2020"],
         "pretty": true
