--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ramp-pcar",
-    "version": "4.5.0",
+    "version": "4.6.0-beta",
     "description": "RAMP4 - The Reusable Accessible Mapping Platform, is a Javascript based web mapping platform that provides a reusable, responsive and WCAG 2.1 AA compliant common viewer for the Government of Canada. ",
     "type": "module",
     "module": "./dist/lib/ramp.bundle.es.js",
@@ -35,7 +35,7 @@
         "vite-docs:generate": "npx vitepress build docs"
     },
     "dependencies": {
-        "@arcgis/core": "4.26.5",
+        "@arcgis/core": "4.29.10",
         "@popperjs/core": "^2.11.6",
         "@ramp4-pcar4/vue3-treeselect": "github:ramp4-pcar4/vue3-treeselect",
         "@tailwindcss/line-clamp": "^0.4.4",
