--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@tailwindcss/line-clamp": "^0.4.4",
         "@vueform/toggle": "^2.1.3",
         "ag-grid-community": "^27.3.0",
+        "@ag-grid-community/locale": "~32.0.0",
         "ag-grid-vue3": "^27.3.0",
         "animejs": "~3.2.0",
         "await-to-js": "^3.0.0",
