--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "tabWidth": 4,
     "singleQuote": true,
     "trailingComma": "none",
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "endOfLine": "auto"
 }
