--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "test:e2e:ci": "start-server-and-test preview http://127.0.0.1:5050/ 'cypress run'",
         "test:unit": "cypress open-ct",
         "test:unit:ci": "cypress run-ct --quiet --reporter spec",
-        "ts:check": "vue-tsc --noEmit",
+        "ts:check": "vue-tsc --build --force",
         "ts:generate": "vue-tsc --declaration --emitDeclarationOnly || true",
         "ts-docs:generate": "npx typedoc --skipErrorChecking",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
@@ -52,7 +52,7 @@
         "linkify-html": "^4.1.0",
         "lodash.clonedeep": "^4.5.0",
         "marked": "^4.0.10",
-        "pinia": "^2.0.30",
+        "pinia": "^2.1.7",
         "popper-max-size-modifier": "^0.2.0",
         "proj4": "^2.8.1",
         "redaxios": "^0.5.1",
@@ -65,10 +65,10 @@
         "tiny-emitter": "^2.1.0",
         "tippy.js": "^6.3.7",
         "vue": "^3.2.31",
-        "vue-accessible-color-picker": "^4.0.3",
-        "vue-i18n": "^9.1.7",
+        "vue-accessible-color-picker": "^5.0.1",
+        "vue-i18n": "^9.13.1",
         "vue-slider-component": "^4.1.0-beta.7",
-        "vue-tippy": "^6.0.0",
+        "vue-tippy": "^6.4.4",
         "vuedraggable": "next"
     },
     "engines": {
@@ -87,6 +87,7 @@
         "@cypress/vue": "^3.1.1",
         "@rushstack/eslint-patch": "^1.2.0",
         "@tailwindcss/forms": "^0.5.0",
+        "@tsconfig/node20": "^20.1.4",
         "@types/animejs": "~3.1.0",
         "@types/clone-deep": "~4.0.1",
         "@types/debounce": "^1.2.0",
@@ -97,32 +98,32 @@
         "@types/lodash": "^4.14.149",
         "@types/lodash.clonedeep": "^4.5.7",
         "@types/marked": "^4.0.1",
-        "@types/node": "^17.0.29",
+        "@types/node": "^20.14.9",
         "@types/proj4": "^2.5.2",
         "@types/throttle-debounce": "~2.1.0",
         "@vitejs/plugin-vue": "^4.0.0",
-        "@vue/eslint-config-prettier": "^7.0.0",
-        "@vue/eslint-config-typescript": "^11.0.2",
-        "@vue/tsconfig": "^0.1.3",
+        "@vue/eslint-config-prettier": "^9.0.0",
+        "@vue/eslint-config-typescript": "^13.0.0",
+        "@vue/tsconfig": "^0.5.1",
         "autoprefixer": "^10.4.4",
         "cypress": "^9.5.3",
         "cypress-plugin-tab": "~1.0.5",
         "d3-dsv": "^3.0.1",
-        "eslint": "^8.23.1",
-        "eslint-plugin-cypress": "^2.12.1",
-        "eslint-plugin-vue": "^9.5.1",
+        "eslint": "^8.56.0",
+        "eslint-plugin-cypress": "^3.3.0",
+        "eslint-plugin-vue": "^9.27.0",
         "npm-run-all2": "^6.1.2",
         "postcss": "^8.4.12",
         "postcss-import": "^14.1.0",
-        "prettier": "^2.7.1",
+        "prettier": "^3.3.2",
         "sass": "^1.50.0",
         "start-server-and-test": "^1.14.0",
         "tailwindcss": "^3.0.23",
-        "typedoc": "^0.24.8",
-        "typescript": "^4.6.4",
+        "typedoc": "^0.26.3",
+        "typescript": "^5.5.3",
         "vite": "^4.1.4",
-        "vite-plugin-mkcert": "^1.13.3",
+        "vite-plugin-mkcert": "^1.17.5",
         "vitepress": "^1.0.0-beta.1",
-        "vue-tsc": "^1.8.27"
+        "vue-tsc": "^2.0.26"
     }
 }
