--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,19 @@
 {
-    "extends": "@vue/tsconfig/tsconfig.web.json",
-    "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-    "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "@/*": ["./src/*"],
-            "vue-slider-component": ["./scripts/vue-slider-component.d.ts"]
+    "files": [],
+    "references": [
+        {
+            "path": "./tsconfig.node.json"
         },
-        "lib": ["DOM", "DOM.Iterable", "ES2020"],
-        "pretty": true,
-        "declaration": true,
-        "declarationDir": "./dist/ts",
-        "types": ["node"]
+        {
+            "path": "./tsconfig.app.json"
+        },
+        {
+            "path": "./tsconfig.cypress-ct.json"
+        }
+    ],
+    "compilerOptions": {
+        "module": "NodeNext"
     },
-
     "typedocOptions": {
         "entryPoints": [
             "./src/main.ts",
@@ -39,11 +39,5 @@
             "**/fixtures/grid/accessibility.ts",
             "**/geo/esri.ts"
         ]
-    },
-
-    "references": [
-        {
-            "path": "./tsconfig.vite-config.json"
-        }
-    ]
+    }
 }
