--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,9 @@ jobs:
 
             - uses: actions/setup-node@v4
               with:
-                node-version: latest
-                cache: 'npm'
-                registry-url: 'https://registry.npmjs.org'
+                  node-version: latest
+                  cache: 'npm'
+                  registry-url: 'https://registry.npmjs.org'
 
             - name: Get dist files
               uses: actions/cache@v4
@@ -30,8 +30,8 @@ jobs:
               id: get-docs-cache
               uses: actions/cache@v4
               with:
-                path: docs
-                key: docs-${{ inputs.cache_sha }}
+                  path: docs
+                  key: docs-${{ inputs.cache_sha }}
 
             - name: Add docs folder to dist
               if: steps.get-docs-cache.outputs.cache-hit == 'true'
@@ -48,15 +48,15 @@ jobs:
             - name: Publish to NPM
               if: github.repository == 'ramp4-pcar4/ramp4-pcar4' && startsWith(github.ref, 'refs/tags/v')
               run: |
-                TAG_VERSION=${GITHUB_REF#refs/tags/v}
-                PACKAGE_VERSION=$(node -p "require('./package.json').version")
-                if [ "$TAG_VERSION" != "$PACKAGE_VERSION" ]; then
-                    npm version --allow-same-version --no-git-tag-version $TAG_VERSION
-                fi 
+                  TAG_VERSION=${GITHUB_REF#refs/tags/v}
+                  PACKAGE_VERSION=$(node -p "require('./package.json').version")
+                  if [ "$TAG_VERSION" != "$PACKAGE_VERSION" ]; then
+                      npm version --allow-same-version --no-git-tag-version $TAG_VERSION
+                  fi 
 
-                npm publish
+                  npm publish
               env:
-                NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+                  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
             - uses: actions/github-script@v6
               name: Post link to demo for PR's
@@ -69,6 +69,11 @@ jobs:
                         repo: context.repo.repo,
                         body: `Your demo site is ready! 🚀
 
+                        Enhanced Testing:
+                        Samples: https://${{github.repository_owner}}.github.io/ramp4-pcar4/${{github.head_ref}}/demos/enhanced-samples.html
+                        Catalogue: https://${{github.repository_owner}}.github.io/ramp4-pcar4/${{github.head_ref}}/demos/enhanced-all.html
+
+                        Legacy Testing:
                         Main: https://${{github.repository_owner}}.github.io/ramp4-pcar4/${{github.head_ref}}/
                         Catalogue: https://${{github.repository_owner}}.github.io/ramp4-pcar4/${{github.head_ref}}/demos/index-all.html
                         Samples: https://${{github.repository_owner}}.github.io/ramp4-pcar4/${{github.head_ref}}/demos/index-samples.html`
