Update node to version 22.5.1

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -40,7 +40,7 @@ jobs:
 
             - uses: actions/setup-node@v4
               with:
-                  node-version: latest
+                  node-version: '22.5.1'
                   cache: 'npm'
 
             - name: Try to restore node_modules folder from cache
