--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
 
             - uses: actions/setup-node@v4
               with:
-                  node-version: latest
+                  node-version: '22.5.1'
                   cache: 'npm'
                   registry-url: 'https://registry.npmjs.org'
 
