--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
         "vite-docs:generate": "npx vitepress build docs"
     },
     "dependencies": {
+        "@ag-grid-community/locale": "~32.0.0",
         "@arcgis/core": "4.29.10",
         "@popperjs/core": "^2.11.6",
         "@ramp4-pcar4/vue3-treeselect": "github:ramp4-pcar4/vue3-treeselect",
         "@tailwindcss/line-clamp": "^0.4.4",
         "@vueform/toggle": "^2.1.3",
         "ag-grid-community": "^27.3.0",
-        "@ag-grid-community/locale": "~32.0.0",
         "ag-grid-vue3": "^27.3.0",
         "animejs": "~3.2.0",
         "await-to-js": "^3.0.0",
@@ -73,7 +73,7 @@
         "vuedraggable": "next"
     },
     "engines": {
-        "node": ">=16.14.2"
+        "node": "=22.5.1"
     },
     "overrides": {
         "minimist": ">=1.2.6",
@@ -88,7 +88,7 @@
         "@cypress/vue": "^3.1.1",
         "@rushstack/eslint-patch": "^1.2.0",
         "@tailwindcss/forms": "^0.5.0",
-        "@tsconfig/node20": "^20.1.4",
+        "@tsconfig/node22": "^22.0.0",
         "@types/animejs": "~3.1.0",
         "@types/clone-deep": "~4.0.1",
         "@types/debounce": "^1.2.0",
